# LiRAYS-SCADA-python

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: README.md  basic.py  bulk_test.py  common.py  data_stress.py  main.py  subscribe.py  tree_stress.py
python/lirays/: __init__.py  __init__.pyi
python/lirays/lib_lirays.dylib.dSYM/Contents/: Info.plist
src/: lib.rs
tests/: test_python_client_files.py
